manifests/loxilb-ingress-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: loxilb-ingress
    app.kubernetes.io/name: loxilb-ingress
  name: loxilb-ingress
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: loxilb-ingress
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: loxilb-ingress
      app.kubernetes.io/instance: loxilb-ingress
      app.kubernetes.io/name: loxilb-ingress
  template:
    metadata:
      name: loxilb-ingress
      labels:
        app: loxilb-ingress
        app.kubernetes.io/instance: loxilb-ingress
        app.kubernetes.io/name: loxilb-ingress
    spec:
      #hostNetwork: true
      #dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: loxilb-ingress
      containers:
      - name: loxilb-ingress
        image: "ghcr.io/loxilb-io/loxilb-ingress:latest"
        imagePullPolicy: Always
        command: [ "/bin/loxilb-ingress" ]
        ports:
        - containerPort: 11111
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
